# lambda-neon

./: .gitignore  cdk.json  package-lock.json  package.json
backend/movies/: .env-sample  Cargo.toml
backend/movies/events/: test.json
backend/movies/src/: main.rs
backend/movies/src/movies/: models.rs  service.rs
bruno/: bruno.json  collection.bru  movies.bru
db/: movies_sm.csv  requirements.txt  seed.py  test_query.py
db/migrations/: 20241220105949_pgvec.sql  20241220110641_movies_table.sql
lib/: sem_search-stack.ts
test/: sem_search.test.ts
