[package]
name = "movies"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.65.0"
aws-sdk-secretsmanager = "1.55.0"
lambda_http = "0.14.0"
pgvector = { version = "0.4.0", features = ["sqlx"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["macros", "postgres", "runtime-tokio", "tls-rustls-aws-lc-rs"] }

tokio = { version = "1", features = ["macros"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
